<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_small"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/corner_radius_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_large">

            <TextView
                android:id="@+id/tvTransactionIdentifierTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transactions_title"
                android:theme="@style/Title.Medium"
                app:layout_constraintEnd_toStartOf="@+id/tvTransactionQuantityLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSkuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_medium"
                android:theme="@style/Title.Medium"
                android:text="@string/transaction_sku_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTransactionIdentifierTitle" />

            <TextView
                android:id="@+id/tvTransactionIdentifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="@dimen/space_medium"
                android:text="@string/empty_case"
                app:layout_constraintStart_toEndOf="@id/tvSkuLabel"
                app:layout_constraintTop_toBottomOf="@id/tvTransactionIdentifierTitle" />

            <TextView
                android:id="@+id/tvTransactionQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_quantity_label"
                android:theme="@style/Title.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTransactionAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:text="@string/empty_case"
                app:layout_constraintBottom_toBottomOf="@id/tvTransactionIdentifier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTransactionIdentifier" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
