<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="@dimen/splash_icon_size"
        android:layout_height="@dimen/splash_icon_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="splash.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/tvSkuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/transaction_sku_label"
        android:theme="@style/Title.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTransactionIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/transactions_title"
        android:textColor="@color/mine_shaft"
        android:theme="@style/Title.Large"
        app:layout_constraintEnd_toStartOf="@id/tvTotalAmount"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/tvSkuLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_large"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/transaction_detail_total_amount_title"
        android:textColor="@color/mine_shaft"
        android:theme="@style/Title.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_margin="@dimen/space_large"
        android:background="@color/dusty_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionIdentifier" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactionsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:listitem="@layout/item_detail_transaction" />
</androidx.constraintlayout.widget.ConstraintLayout>
